# App-server

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  run.sh
cmake/: utils.cmake
conf/: log.yaml
data/: receive.txt
src/: main.cpp
src/ClientHandler/: CMakeLists.txt
src/ClientHandler/include/: ClientHandler.h
src/ClientHandler/src/: ClientHandler.cpp
src/CommunicatorServer/: CMakeLists.txt
src/CommunicatorServer/include/: CommunicatorServer.h
src/CommunicatorServer/src/: CommunicatorServer.cpp
src/Message/: CMakeLists.txt
src/Message/include/: CacheMessage.h  ChatMessage.h  LoginMessage.h  MessageBase.h  RegisterMessage.h
src/Message/src/: CacheMessage.cpp  ChatMessage.cpp  LoginMessage.cpp  MessageBase.cpp  RegisterMessage.cpp
src/MyTcpServer/: CMakeLists.txt
src/MyTcpServer/include/: DataHandle.h  MyTcpServer.h  UserConnectionManager.h
src/MyTcpServer/src/: DataHandle.cpp  MyTcpServer.cpp  UserConnectionManager.cpp
src/MysqlInteractor/: CMakeLists.txt
src/MysqlInteractor/include/: MysqlConfigManager.h  MysqlConnectPool.h  MysqlInteractor.h
src/MysqlInteractor/src/: MysqlConfigManager.cpp  MysqlConnectPool.cpp  MysqlInteractor.cpp
